[package]
name = "grapheme_width"
version = "0.1.0"
edition = "2021"
authors = ["pascalkuthe <pascalkuthe@semimod.de>"]
license = "MIT"
rust-version = "1.63"

repository = "https://github.com/pascalkuthe/termgraphemes"
readme = "README.md"
description = "Lightweight grapheme display width calculation for terminals."
keywords = ["text", "unicode", "grapheme", "word", "boundary"]
categories = ["command-line-interface"]

exclude = ["fuzz", "tests", "xtask"]

[dependencies]
ucd-trie = "0.1.5"

[dev-dependencies]
termwiz = "0.20.0"

[workspace]
members = ["xtask"]

